--- a/go/docker-compose.yml
+++ b/go/docker-compose.yml
@@ -8,28 +8,28 @@ services:
       - "5002:7042" #do not change 7042 as this is the internal port
     volumes:
       - ./prometheus.yml:/app/prometheus.yml
-    networks:
-    - prometheus-network
+    # networks:
+    # - prometheus-network
 
 
-  prometheus:
-    restart: always
-    container_name: prometheus
-    image: prom/prometheus
-    ports: 
-      - "9090:9090"
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-      - ./prometheus-data:/prometheus \
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-      - "--storage.tsdb.path=/prometheus"
-      - "--web.enable-lifecycle"
-    networks:
-      - prometheus-network
-networks:
-  prometheus-network:
-    driver: bridge
+#   prometheus:
+#     restart: always
+#     container_name: prometheus
+#     image: prom/prometheus
+#     ports: 
+#       - "9090:9090"
+#     volumes:
+#       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+#       - ./prometheus-data:/prometheus \
+#     command:
+#       - "--config.file=/etc/prometheus/prometheus.yml"
+#       - "--storage.tsdb.path=/prometheus"
+#       - "--web.enable-lifecycle"
+#     networks:
+#       - prometheus-network
+# networks:
+#   prometheus-network:
+#     driver: bridge
 
 
 
