--- a/go/docker-compose.yml
+++ b/go/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 #     ports: 
 #       - "9090:9090"
 #     volumes:
-#       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+#       - ./prometheus:/etc/prometheus/
 #       - ./prometheus-data:/prometheus \
 #     command:
 #       - "--config.file=/etc/prometheus/prometheus.yml"
